Shapekey memory leak for nomain meshes #55031

Closed
opened 2018-05-11 14:27:24 +02:00 by Sybren A. Stüvel · 3 comments

Here is a simple blend file that shows the same memory leak that the Dweebs had (but is way faster to load).
memdebug2.blend

The problem is that BKE_mesh_copy_data copies me_src->key but BKE_mesh_free doesn't free me->key.

This patch gets rid of the memory leak, but causes a "heap-use-after-free" error upon exit of Blender:

diff --git a/source/blender/blenkernel/intern/mesh.c b/source/blender/blenkernel/intern/mesh.c
index e1739345d19..b82497d918c 100644
--- a/source/blender/blenkernel/intern/mesh.c
+++ b/source/blender/blenkernel/intern/mesh.c
@@ -45,6 +45,7 @@
 - include "BKE_main.h"
 - include "BKE_DerivedMesh.h"
 #include "BKE_global.h"
+#include "BKE_key.h"
 - include "BKE_mesh.h"
 - include "BKE_library.h"
 #include "BKE_material.h"
@@ -490,6 +491,14 @@ bool BKE_mesh_has_custom_loop_normals(Mesh *me)
 /** Free (or release) any data used by this mesh (does not free the mesh itself). */
 void BKE_mesh_free(Mesh *me)
 {
+
+       if (me->key != NULL) {
+               printf("    - freeing    shapekey of %p\n", me);
+               BKE_key_free(me->key);
+               MEM_freeN(me->key);
+               me->key = NULL;
+       }
+
        BKE_animdata_free(&me->id, false);
 
        BKE_mesh_batch_cache_free(me);

Here is the above patch with some more debug prints in more-or-less relevant places: with-debug-prints.diff

Here is a simple blend file that shows the same memory leak that the Dweebs had (but is way faster to load). [memdebug2.blend](https://archive.blender.org/developer/F3341370/memdebug2.blend) The problem is that `BKE_mesh_copy_data` copies `me_src->key` but `BKE_mesh_free` doesn't free `me->key`. This patch gets rid of the memory leak, but causes a "heap-use-after-free" error upon exit of Blender: ``` diff --git a/source/blender/blenkernel/intern/mesh.c b/source/blender/blenkernel/intern/mesh.c index e1739345d19..b82497d918c 100644 --- a/source/blender/blenkernel/intern/mesh.c +++ b/source/blender/blenkernel/intern/mesh.c @@ -45,6 +45,7 @@ - include "BKE_main.h" - include "BKE_DerivedMesh.h" #include "BKE_global.h" +#include "BKE_key.h" - include "BKE_mesh.h" - include "BKE_library.h" #include "BKE_material.h" @@ -490,6 +491,14 @@ bool BKE_mesh_has_custom_loop_normals(Mesh *me) /** Free (or release) any data used by this mesh (does not free the mesh itself). */ void BKE_mesh_free(Mesh *me) { + + if (me->key != NULL) { + printf(" - freeing shapekey of %p\n", me); + BKE_key_free(me->key); + MEM_freeN(me->key); + me->key = NULL; + } + BKE_animdata_free(&me->id, false); BKE_mesh_batch_cache_free(me); ``` Here is the above patch with some more debug prints in more-or-less relevant places: [with-debug-prints.diff](https://archive.blender.org/developer/F3341393/with-debug-prints.diff)
Bastien Montagne was assigned by Sybren A. Stüvel 2018-05-11 14:27:24 +02:00
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This issue was referenced by eabfd031fa

This issue was referenced by eabfd031fa055dc064c751b4cd2cb6a783a24cfd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55031
No description provided.