Fix T55031: add explicit copy flag to force deep-copying shapekey datablock with 'parent' one.

Chose to change defaut behavior (0-flag one) here, for sake of
consistency. Default behavior of simple BKE_id_copy() remains unchanged
though.